# Veracrypt-android

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/io/veracrypt/android/: ContainerViewerProvider.kt  FileExplorerActivity.kt  MainActivity.kt  RootFuseManager.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_file_explorer.xml  activity_main.xml  dialog_create_container.xml  item_explorer_entry.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/io/veracrypt/android/: ExampleUnitTest.kt
core-api/: build.gradle.kts
core-api/src/main/java/io/veracrypt/android/coreapi/: ContainerReader.kt  VolumeHeader.kt
core-api/src/test/java/io/veracrypt/android/coreapi/: VolumeHeaderTest.kt
core-native/: CMakeLists.txt  build.gradle.kts
core-native/src/androidTest/assets/: generate_test_container.py  test.vc
core-native/src/androidTest/java/io/veracrypt/android/corenative/: NativeBridgeParseHeaderTest.kt
core-native/src/main/cpp/: veracrypt_jni.cpp
core-native/src/main/java/io/veracrypt/android/corenative/: NativeBridge.kt
gradle/: libs.versions.toml
provider-saf/: build.gradle.kts
provider-saf/src/main/: AndroidManifest.xml
provider-saf/src/main/java/io/veracrypt/android/providersaf/: VeraCryptDocumentsProvider.kt
